Vue Route with Vuex

--- a/vue-router-vuex.html
+++ b/vue-router-vuex.html
@@ -1,8 +1,8 @@
 <script src="https://unpkg.com/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 <script src="https://unpkg.com/vuex/dist/vuex.js"></script>
-<!--
-<script type="text/javascript" src="https://unpkg.com/@vue/composition-api/dist/vue-composition-api.umd.js"></script>
+<!-- 
+<script src="https://unpkg.com/@vue/composition-api/dist/vue-composition-api.umd.js"></script>
 -->
 
 <div id="app">
@@ -147,7 +147,7 @@ const app = new Vue({
 	router,
   	components: {
 		'comp1': Component1,
-		'comp2': Component2
+		'comp2': Component2,		
 	}
 }).$mount('#app')
 
